--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/3n0ugh/To-Do-App#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "joi": "^17.4.2",
     "monk": "^7.3.4",
     "morgan": "^1.10.0"
   },
