--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootswatch": "^5.1.0",
     "core-js": "^3.6.5",
+    "markdown-it": "^12.2.0",
+    "markdown-it-emoji": "^2.0.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
